Big big day
Test for fungus and other stuff.
fungus & carcass